tdf#103964 DOCX import: ignore rotation when setting position of group shapes

Regression from commit 36ac7749523e0c6f40a77beac278bd9e7a667a9b (DOCX
import: make sure rotation does not affect shape position, 2014-09-24),
the motivation for tweaking the rotation when setting the position of a
shape was for images. By accident, this also happened for group shapes.

But the bugdoc shows it's not a good idea to read the rotation of group
shapes: the group shape is just a container, it does not have rotation
in itself.

(The test120551 intention was probably just to verify that the position
is not entirely off, so the small required change to the expected value
should be OK.)

(cherry picked from commit 9fedce7a261f28dc286943f7bdd2adb010ed9b31)

Conflicts:
	writerfilter/CppunitTest_writerfilter_dmapper.mk

Change-Id: I8e12c28e65c5f64168c3f802546fddf472fcc6eb