writerfilter/source/dmapper/GraphicImport.cxx
@@ -851,10 +851,13 @@ void GraphicImport::lcl_attribute(Id nName, Value& rValue)
                             // independent, but they are not. Till we are not
                             // there yet to handle all scaling, translation and
                             // rotation with a single transformation matrix,
-                            // make sure there is no rotation set when we set
+                            // make sure there is no graphic rotation set when we set
                             // the position.
                             sal_Int32 nRotation = 0;
-                            xShapeProps->getPropertyValue("RotateAngle") >>= nRotation;
+                            if (xServiceInfo->supportsService("com.sun.star.drawing.GraphicObjectShape"))
+                            {
+                                xShapeProps->getPropertyValue("RotateAngle") >>= nRotation;
+                            }
                             if (nRotation)
                                 xShapeProps->setPropertyValue("RotateAngle", uno::makeAny(sal_Int32(0)));
 
